[project]
name = 'signer'
authors = [{name = 'BOS', email = 'team@bos.domain'}]
dynamic = ['version', 'description']
readme = 'README.md'
requires-python = '>=3.12'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: Public Domain',
    'Operating System :: OS Independent'
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    'pycodestyle == 2.13.0',
    'pylint == 3.3.7'
]

[project.urls]
Home = 'https://github.com/bitsnark/grail-enclave'

[build-system]
requires = ['flit_core == 3.12.0']
build-backend = 'flit_core.buildapi'

[tool.pytest.ini_options]
addopts = ['--verbose']
testpaths = ['tests']
